<resources>
    <string name="app_name">SmarTACC</string>
    <string name="sync_adapter_name">App Data</string>
    <string name="content_authority">com.ort.smartacc.provider</string>
    <string name="account_type">com.ort.smartacc.account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Ocurrió un error</string>
    <string name="formato_ingrediente_sin_cantidad">\u2022 %1$s de %2$s</string>
    <string name="formato_ingrediente_con_cantidad">\u2022 %1$s %2$s de %3$s</string>

    <string name="description_foto">Foto de la receta</string>
    <string name="receta_titulo_ingredientes">Ingredientes:</string>
    <string name="receta_titulo_categorias">Categorías:</string>
    <string name="receta_titulo_preparacion">Preparación:</string>
    <string name="mapa_info_direccion">Dirección: %1$s</string>
    <string name="mapa_info_descipcion">Descripción: %1$s</string>
    <string name="error_load">No se pudo acceder a la base de datos.\nVerifique su conexión a internet.</string>
    <string name="loading">Actualizando base de datos, aguarde por favor</string>
    <string name="error404">Error 404</string>
    <string name="title_activity_search_result">Resultados</string>
    <string name="title_activity_receta">Receta</string>
    <string name="title_activity_creditos">Créditos y sugerencias</string>

    <string name="title_action_rate">¡Déjanos una reseña!</string>
    <string name="title_action_creditos">Créditos</string>

    <string name="rate_title">Califica la Aplicación!</string>
    <string name="rate_explanation">¿Estás feliz con SmarTACC? ¿Consideras que puede ser mejor? ¡Califica la aplicación y escríbenos una reseña!</string>
    <string name="rate_now">Sí!</string>
    <string name="rate_later">Más tarde</string>
    <string name="rate_never">No</string>
    <string name="txtEmailSugerencia">E-mail</string>
    <string name="txtSugerencia">Sugerencia</string>
    <string name="btnEnviarSugerencia">Enviar</string>
    <string name="title_activity_sugerencias">Sugerencia</string>
    <string name="disclaimer">RECORDA UTILIZAR SIEMPRE PRODUCTOS CERTIFICADOS COMO ALIMENTOS LIBRES DE GLUTEN (ALG).</string>
    <string name="disclaimer_map">Importante! Este local afirma ser libre de gluten, pero no ha sido verificado por ninguna organización conocida.</string>
    <string name="description_sintacc">Sin TACC</string>

    <string name="default_user">SmarTACC</string>
</resources>
