<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    tools:context=".fragment.RecetaFragment"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:textSize="@dimen/receta_titulo"
            android:id="@+id/receta_titulo"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/receta_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/description_foto"
            /><!-- style="@style/BorderImageView" -->
        <include
            layout="@layout/component_disclaimer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"/>
        <TextView
            android:textSize="@dimen/receta_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receta_titulo_ingredientes"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        <LinearLayout
            android:id="@+id/receta_list_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:textSize="@dimen/receta_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receta_titulo_categorias"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp" />
        <LinearLayout
            android:id="@+id/receta_list_categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:textSize="@dimen/receta_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receta_titulo_preparacion"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp" />
        <TextView
            android:id="@+id/receta_texto_preparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16dp"/>

    </LinearLayout>
</ScrollView>